--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
   "name": "Dolphin Wallet Finder",
   "short_name": "Dolphin",
-  "start_url": "/dolphinwalletfinder/index.html",
+  "start_url": "/vip/index.html",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/dolphinwalletfinder/assets/logo.png",
+      "src": "/vip/assets/logo.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/dolphinwalletfinder/assets/logo.png",
+      "src": "/vip/assets/logo.png",
       "sizes": "512x512",
       "type": "image/png"
     }
